--- a/docs/application-hosting/applications/qbittorrent.mdx
+++ b/docs/application-hosting/applications/qbittorrent.mdx
@@ -92,7 +92,7 @@ First step is to Download one of the Plugins from the link provided, they are un
 4. Go back into your SSH window and issue this command:
 ```wget <the link you copied from your browser>```
 :::tip
-If using PuTTy, right clicking with your mouse will act as paste, using ctrl+v will not work.
+If using PuTTy, right clicking with your mouse will act as paste, using ctrl+v will not work!
 :::
 5. After you have the link added, just hit Enter and let it download the .py file. 
 6. You may require to restart qBittorrent for the Plugin to show up.
