--- a/docs/application-hosting/applications/plex.mdx
+++ b/docs/application-hosting/applications/plex.mdx
@@ -6,6 +6,10 @@ sidebar_label: Plex
 
 Plex media server allows you to aggregate all your personal media and access it anywhere you go.
 
+:::tip Upgrading
+Upgrading your PLEX instance is a simple process, login to the webui/dashboard we provide for your service, find the "Application management" section in the page you are presented with, from there simply click "Restart" next to plex, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
+:::
+
 ## Initial Setup
 
 First you must connect to your slot via ssh. If you need help connecting to the server, please read the help article [here](../getting-started/how-do-i-connect.md).
