--- a/docs/application-hosting/applications/plex.mdx
+++ b/docs/application-hosting/applications/plex.mdx
@@ -7,7 +7,7 @@ sidebar_label: Plex
 Plex media server allows you to aggregate all your personal media and access it anywhere you go.
 
 :::tip Upgrading
-Upgrading your PLEX instance is a simple process, login to the webui/dashboard we provide for your service, find the "Application management" section in the page you are presented with, from there simply click "Restart" next to plex, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
+Upgrading your PLEX instance is a simple process, login to the webui/dashboard we provide for your service, find the "Service info" section in the page you are presented with, from there simply click "Restart" next to plex, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
 :::
 
 ## Initial Setup
