--- a/docs/getting-started/introduction-c.mdx
+++ b/docs/getting-started/introduction-c.mdx
@@ -6,7 +6,7 @@ sidebar_label: Introduction client area
 
 ## Introduction
 
-When you signup for a seedbox with us, you will also get a login that allows you to login to your client area, in this next little part of text/image, we will try to give an impression of what you can actually do within your client area.
+When you signup for a service with us, you will also get a login that allows you to login to your client area, in this next little part of text/image, we will try to give an impression of what you can actually do within your client area.
 
 ### First login
 
