--- a/docs/pre-sales/switching.mdx
+++ b/docs/pre-sales/switching.mdx
@@ -6,7 +6,7 @@ sidebar_label: Switching from other provider
 
 Looking to move to HostingByDesign, but you do not wish to loose all of your data?
 
-No problem! Purchase your seedbox and send us a support ticket including your login details for the old seedbox and we will handle the entire migration for you.
+No problem! Purchase your app hosting and send us a support ticket including your login details for the old service and we will handle the entire migration for you.
 
 A few things we need to migrate you:
 
