--- a/docs/pre-sales/switching.mdx
+++ b/docs/pre-sales/switching.mdx
@@ -4,7 +4,7 @@ title: Switching from other provider?
 sidebar_label: Switching from other provider
 ---
 
-Looking to move to HostingByDesign, but you do not wish to loose all of your data?
+Looking to move to HostingByDesign, but you do not wish to lose all of your data?
 
 No problem! Purchase your app hosting and send us a support ticket including your login details for the old service and we will handle the entire migration for you.
 
