--- a/docs/application-hosting/guides/mktorrent.mdx
+++ b/docs/application-hosting/guides/mktorrent.mdx
@@ -43,6 +43,6 @@ mktorrent -v -p -l 24 -a https://some.tracker/announce/somerandomhashgoeshere -o
 Assuming that you put your torrent in the regular download directory, youy should be able to simply load it into your favourite torrent client and you'll be off to the races.
 
 :::tip
-If you're having issues with mktorrent, please consider joining our [Discord](https://discord.gg/wv67teS) or putting in a [support ticket](https://my.hostingby.design/submitticket.php?step=2&deptid=2) for more assistance.
+If you're having issues with mktorrent, please consider joining our [Discord](https://discord.gg/StaAybe3rm) or putting in a [support ticket](https://my.hostingby.design/submitticket.php?step=2&deptid=2) for more assistance.
 Alternatively, maybe try using [rutorrent](../applications/rtorrent.mdx) for generating your torrent files.
 :::
