--- a/docs/application-hosting/snippets/clients.mdx
+++ b/docs/application-hosting/snippets/clients.mdx
@@ -44,7 +44,7 @@ SSL: OFF"
   <TabItem value="qbittorrent">
     <CodeBlock
       children="Name: qBittorrent
-Host: 127.0.0.1
+Host: <subnet ip> (In older cases: 127.0.0.1)
 Post: <qbittorrent web port>
 Username: <your username>
 Password: <your password>
