--- a/docs/application-hosting/applications/qbittorrent.mdx
+++ b/docs/application-hosting/applications/qbittorrent.mdx
@@ -89,3 +89,19 @@ less -r +G ~/.local/share/qBittorrent/logs/qbittorrent.log
 To exit `less`, press `q`.
 
 :::
+
+### Transdroid/Transdrone
+
+Should you wish to connect your qBittorrent instance to the mobile application Transdrone, use the following settings:
+
+```plaintext main
+Name: qBittorrent (or whatever you like)
+Server type: qBit
+IP or host name: <the hostname of your server>
+Username: <your username>
+Password: <your password>
+Advanced Settings:
+    Port: 443
+    Folder: /qbittorrent
+    Use SSL: ON
+```
