Add some notes around getting subnet IP for ombi and qbittorrent

--- a/docs/application-hosting/applications/ombi.mdx
+++ b/docs/application-hosting/applications/ombi.mdx
@@ -38,6 +38,8 @@ If you have further questions about settings and configurations of Ombi, please 
 
 ## Connect to other clients
 
+> To get your subnet IP, SSH into your server and run `cat .install/subnet.lock`
+
 ### Sonarr
 
 :::panel
