--- a/docs/application-hosting/snippets/clients.mdx
+++ b/docs/application-hosting/snippets/clients.mdx
@@ -33,7 +33,7 @@ NOTE: If you have errors adding rTorrent to Sonarr, please try going to Settings
     <CodeBlock
       children="Name: Deluge
 Host: 127.0.0.1
-Post: <deluge web port>
+Post: <deluge web port> (cat ~/.config/deluge/web.conf | grep port)
 Deluge Password: <your password>
 Add label to torrent: TV (or anything else you desire)
 * label plugin must be enabled in Deluge if you add a label
