Update kodi remote path details

--- a/docs/application-hosting/guides/kodi.mdx
+++ b/docs/application-hosting/guides/kodi.mdx
@@ -28,7 +28,7 @@ Steps to set it up:
 ```plaintext
 Protocol: FTP server
 Server address: XXX.itsby.design (XXX is to be replaced with your app slot)
-Remote path: files
+Remote path: <leave empty or set to a folder available on the service)
 Port: 21
 Username: <app slot username>
 Password: <app slot password>
