docs(autobrr): add upgrade instructions

--- a/docs/application-hosting/applications/autobrr.mdx
+++ b/docs/application-hosting/applications/autobrr.mdx
@@ -22,6 +22,14 @@ This command will configure and install autobrr.
 
 Once setup, Autobrr will be available at the link `https://<hostname.design>/autobrr`
 
+## Upgrading autobrr
+
+Since autobrr doesn't use any sort of internal update mechanism, you must check from time to time for updates. You can do this with the command:
+
+```plaintext main
+box upgrade autobrr
+```
+
 ## Service Management
 
 Like all box configured applications, you can manage Autobrr via SSH with box with start, stop, restart, enable and disable commands.
