--- a/docs/application-hosting/applications/prowlarr.mdx
+++ b/docs/application-hosting/applications/prowlarr.mdx
@@ -20,6 +20,8 @@ This command will configure Prowlarr for your user.
 
 ## How to Access
 
+:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!
+
 After Prowlarr has been installed, it will be available for access at `https://<hostname.io>/prowlarr`.
 
 ## Service Management
