--- a/docs/application-hosting/applications/radarr.mdx
+++ b/docs/application-hosting/applications/radarr.mdx
@@ -20,6 +20,8 @@ This command will configure radarr for your user.
 
 ## How to Access
 
+:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!
+
 After Radarr has been installed, it will be available for access at `https://<hostname.io>/radarr`.
 
 ## Service Management
