--- a/docs/application-hosting/applications/prowlarr.mdx
+++ b/docs/application-hosting/applications/prowlarr.mdx
@@ -20,7 +20,7 @@ This command will configure Prowlarr for your user.
 
 ## How to Access
 
-:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!
+:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!:::
 
 After Prowlarr has been installed, it will be available for access at `https://<hostname.io>/prowlarr`.
 
