--- a/docs/application-hosting/applications/sonarr.mdx
+++ b/docs/application-hosting/applications/sonarr.mdx
@@ -20,7 +20,8 @@ This command will configure sonarr for your user.
 
 ## How to Access
 
-:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!:::
+:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!
+:::
 
 Once setup, sonarr will be available at the link `https://<hostname.io>/sonarr`
 
