--- a/docs/application-hosting/applications/bazarr.mdx
+++ b/docs/application-hosting/applications/bazarr.mdx
@@ -20,7 +20,7 @@ This command will configure bazarr for your user.
 
 ## How to Access
 
-:::caution On initial launch it is critical that you setup authentication to "Forms based" logins when asked to setup credentials!
+:::caution On initial launch it is critical that you use the same login credentials AND set authentication to "Forms based" logins when asked to setup credentials!
 :::
 
 Once setup, bazarr will be available at the link `https://<hostname.io>/bazarr`
