--- a/docs/application-hosting/applications/prowlarr.mdx
+++ b/docs/application-hosting/applications/prowlarr.mdx
@@ -45,7 +45,11 @@ Out of the box, Prowlarr comes with very little configuration. Following are som
 
 ### Connect download clients
 
-First, navigate to the settings page in the sidebar, then click "Download Clients". Client specific info is available below. You may need to know your subnet to configure correctly. You may retrieve this by logging into your slot via ssh and entering the command `cat $HOME/.install/subnet.lock` or by going to the general menu in prowlarr, clicking "show advanced", then look at the bind address.
+First, navigate to the settings page in the sidebar, then click "Download Clients". Client specific info is available below. You may need to know your subnet to configure correctly. You may retrieve this by following the below tip or by going to the general menu in prowlarr, clicking "show advanced", then look at the bind address.
+
+import Subnet from '../snippets/subnet.mdx';
+
+<Subnet />
 
 import Clients from "../snippets/clients.mdx";
 
@@ -62,7 +66,7 @@ You need to know your subnet to configure correctly. Go to the Settings -> Gener
 3. Under "Applications", click the + button.
 4. Select the application you wish to sync your indexers to.
 5. Enter the subnet ip like the following for prowlarr:
-    - `http://subnet:port/prowlarr/
+    - `http://subnet:port/prowlarr/`
 6. Enter the subnet ip like the following for any of the supported apps you have installed via box:
-    - `http://subnet:port/appname/
+    - `http://subnet:port/appname/`
 7. Repeat as neccesary.
