--- a/docs/pre-sales/refund.mdx
+++ b/docs/pre-sales/refund.mdx
@@ -14,5 +14,6 @@ All refund requests must be dealt with by contacting our billing department via 
 
 - `*` Refunds for payments done via crypto is currently not supported.
 - `**` In case of AUP violations, any and all refunds are forfeit.
-- `***` **Tests are deemed within 14 days, with a maximum of 1TB of data transferred in/out from the service in question, this should provide enough time/throughput to get a solid feel for whether the service is a good fit or not, have you used more than the 1TB data then you are not entitled to a refund.**
+- `***` Refund policy does not cover any cases where the IP of the provided service is blocked or restricted, the IPs are delivered as is.
+- `****` **Tests are deemed within 14 days, with a maximum of 1TB of data transferred in/out from the service in question, this should provide enough time/throughput to get a solid feel for whether the service is a good fit or not, have you used more than the 1TB data then you are not entitled to a refund.**
 
