Removed sudo in install command

--- a/docs/application-hosting/applications/jellyfin.mdx
+++ b/docs/application-hosting/applications/jellyfin.mdx
@@ -11,7 +11,7 @@ Jellyfin is a self-hosted AV streaming platform. It is a FOSS fork of the Emby p
 You can install Jellyfin using the following command.
 
 ```bash
-sudo box install jellyfin
+box install jellyfin
 ```
 
 :::caution Finish install in browser
