--- a/docs/application-hosting/getting-started/bandwith.mdx
+++ b/docs/application-hosting/getting-started/bandwith.mdx
@@ -20,9 +20,12 @@ If you hit the limit on your package then the outgoing network speed will be thr
 
 If you have exceeded your included bandwidth you can buy extra. We offer the following packages:
 
-* 2TB = €2.5
-* 5TB = €5
-* 10TB = €10
+* 2TB = €1.25
+* 5TB = €2.5
+* 10TB = €5
+* 25TB = €10 (Only applicable to the 18TB Package)
+* 50TB = €20 (Only applicable to the 18TB Package)
+* 100TB = €30 (Only applicable to the 18TB Package)
 
 You can find these on the [Product Addons page](https://my.hostingby.design/cart.php?gid=addons).
 
