--- a/docs/pre-sales/notes-cc.mdx
+++ b/docs/pre-sales/notes-cc.mdx
@@ -4,10 +4,8 @@ title: Notes for clients paying with debit/creditcards
 sidebar_label: Notes for CC/DB customers
 ---
 
-Please be aware that when using Debit/Creditcards there's a list of countries that are not able to pay using our gateway, the list is as follows:
+We support a large list of credit/debitcards but please note that we only accept cards that support 3D Secure, you have to pass the 3D Secure check to pay using a card on our system.
 
-Ukraine, Armenia, Azerbaijan, Bulgaria, Cote d`Ivoire, Belize, Afghanistan, Iran, Iraq, Congo, Democratic People's Republic of Korea, Guyana, Laos, Liberia, Myanmar, Somalia, Sudan, Thailand, Vietnam, New Zealand
-
-Anyone using a card issued in these countries or using an IP from any of these countries will be blocked and will have to use a different payment method.
+Any payments processed via a VPN will also be blocked automatically.
 
 **Also note that it is not possible to pay with any kind of proxy/vpn service!**
