--- a/docs/application-hosting/applications/emby.mdx
+++ b/docs/application-hosting/applications/emby.mdx
@@ -8,6 +8,10 @@ Take your home videos, music, and photos with you wherever you go, even offline 
 
 Or sit back and enjoy Emby from the living room. Emby apps are available for Android TV, Amazon Fire TV, Chromecast, Roku, Xbox, Home Theater Computers, and more.
 
+:::tip Upgrading
+Upgrading your EMBY instance is a simple process, login to the webui/dashboard we provide for your service, find the "Service info" section in the page you are presented with, from there simply click "Restart" next to plex, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
+:::
+
 ## Initial Setup
 
 First you must connect to your slot via ssh. If you need help connecting to the server, please read the help article [here](../getting-started/how-do-i-connect.md).
