Update name of fair-use policy page

--- a/docs/vps-hosting/fair-use-policy.mdx
+++ b/docs/vps-hosting/fair-use-policy.mdx
@@ -1,7 +1,7 @@
 ---
 id: fair-use-policy
 title: Fair-use Policy
-sidebar_label: fair-use
+sidebar_label: Fair-use Bandwidth
 ---
 
 Fair Use Policy for Internet Connection
