--- a/docs/vps-hosting/fair-use-policy.mdx
+++ b/docs/vps-hosting/fair-use-policy.mdx
@@ -4,8 +4,7 @@ title: Fair-use Policy
 sidebar_label: Fair-use Bandwidth
 ---
 
-Fair Use Policy for Internet Connection
-Introduction:
+<h1>Introduction:</h1>
 This Fair Use Policy (FUP) outlines the terms and conditions under which users may utilize the internet connection provided by hostingby.design. The purpose of this policy is to ensure fair and reasonable usage of bandwidth while providing an optimal experience for all users.
 
 1. Connection Speed and Capacity:
