--- a/docs/vps-hosting/fair-use-policy.mdx
+++ b/docs/vps-hosting/fair-use-policy.mdx
@@ -4,13 +4,13 @@ title: Fair-use Policy
 sidebar_label: Fair-use Bandwidth
 ---
 
-<h1>Introduction:</h1>
+# Introduction:
 This Fair Use Policy (FUP) outlines the terms and conditions under which users may utilize the internet connection provided by hostingby.design. The purpose of this policy is to ensure fair and reasonable usage of bandwidth while providing an optimal experience for all users.
 
-1. Connection Speed and Capacity:
+## 1. Connection Speed and Capacity:
 Users are entitled to connect their virtual machines according to the specification bought, with the capability to burst to their maximum port capacity. The upload and download speeds are symmetrical, ensuring equitable performance. 
 
-2. Data Traffic Limitation:
+### 2. Data Traffic Limitation:
 Under the Fair Use Policy, users are expected to utilize the internet connection responsibly. While there is no strict limit on data traffic, users are encouraged to operate within reasonable usage patterns. It is assumed that users will not utilize their port at full capacity 24×7.
 
 3. Monitoring and Enforcement:
