Fix last headlines

--- a/docs/vps-hosting/fair-use-policy.mdx
+++ b/docs/vps-hosting/fair-use-policy.mdx
@@ -7,14 +7,14 @@ sidebar_label: Fair-use Bandwidth
 # Introduction:
 This Fair Use Policy (FUP) outlines the terms and conditions under which users may utilize the internet connection provided by hostingby.design. The purpose of this policy is to ensure fair and reasonable usage of bandwidth while providing an optimal experience for all users.
 
-## 1. Connection Speed and Capacity:
+### 1. Connection Speed and Capacity:
 Users are entitled to connect their virtual machines according to the specification bought, with the capability to burst to their maximum port capacity. The upload and download speeds are symmetrical, ensuring equitable performance. 
 
 ### 2. Data Traffic Limitation:
 Under the Fair Use Policy, users are expected to utilize the internet connection responsibly. While there is no strict limit on data traffic, users are encouraged to operate within reasonable usage patterns. It is assumed that users will not utilize their port at full capacity 24×7.
 
-3. Monitoring and Enforcement:
+### 3. Monitoring and Enforcement:
 hostingby.design reserves the right to monitor data traffic usage to ensure compliance with the Fair Use Policy. In the event that a user’s data traffic exceeds the subjective FUP limits, a hostingby.design engineer will contact the user to discuss upgrade options.
 
-4. Upgrade Options:
+### 4. Upgrade Options:
 If a user’s data traffic exceeds the subjective FUP limits, hostingby.design will work with the user to explore upgrade options. This may include upgrading to unlimited data traffic. hostingby.design will keep upgrade options reasonable and will not charge users for bandwidth already used before contacting them.
