--- a/docs/dedicated-servers/getting-started/leaseweb-reinstall.mdx
+++ b/docs/dedicated-servers/getting-started/leaseweb-reinstall.mdx
@@ -65,6 +65,8 @@ swap 4096MB
 
 / ext4 all remaining disk space
 ```
+:::tip Tip
+It's best to use the default partitions and just adjust the sizes of them to make the installs work. For example removing the /boot partition can cause the installer to not function properly.
 
 ## Launch OS Install
 
