Add flaresolverr and fix typos

--- a/docs/pre-sales/payment-methods.mdx
+++ b/docs/pre-sales/payment-methods.mdx
@@ -6,16 +6,16 @@ sidebar_label: Accepted payment methods
 
 We support a very large range of payment options. We have listed them all below, including the fees for each method.
 
-- PayPal (Fee: None!)
+- PayPal
 
-- VISA/MasterCard (Fee: None!)
+- VISA/MasterCard
 
-- Bitcoin / LiteCoin / Ethereum (Fee: None!)
+- Bitcoin / LiteCoin / Ethereum / Monero / +50 other coins
 
-- iDeal (Fee: 5%)
+- iDeal (On request)
 
-- EPS (Fee: 5%)
+- EPS (On request)
 
-- Neosurf (Fee: 7.5%)
+- Neosurf (On request)
 
 We are always looking for new ways to make it easier for our customers, don't hessitate to contact us about a new way to receive payments.
