--- a/docs/pre-sales/refund.mdx
+++ b/docs/pre-sales/refund.mdx
@@ -6,7 +6,7 @@ sidebar_label: Refund policy
 
 All new clients are welcome to **test\*\*\*** our services for up to 14 days 100% riskfree (One (1) refund per customer account is allowed).
 
-NOTE: This does not cover customized dedicated offerings, the plans available on the website are covered but anything outside of that will not be.
+NOTE: This does not cover customized dedicated offerings, the plans available on the website are covered but anything outside of that is not.
 
 Do note, we would naturally very much like to solve any issues, so please submit a ticket in case you have any issues.
 
