Update bandwidth addons for lsw

--- a/docs/dedicated-servers/getting-started/bandwidth.mdx
+++ b/docs/dedicated-servers/getting-started/bandwidth.mdx
@@ -20,6 +20,9 @@ If you have exceeded your included bandwidth you can buy extra. We offer the fol
 - 25TB = €15
 - 50TB = €25
 - 100TB = €40
+- 250TB = €75
+- 500TB = €99
+- Unmetered (Fair use, ~3Gbit avg) = €249
 
 To buy additional bandwidth open a ticket with the specified amount you want. We will then create an invoice and once that is paid we'll increase the bandwidth limit.
 
