--- a/docs/application-hosting/getting-started/box-basics.mdx
+++ b/docs/application-hosting/getting-started/box-basics.mdx
@@ -60,7 +60,7 @@ box remove rtorrent
 
 ### chpasswd
 
-Use this command when you'd like to change your password. `chpasswd` will change the password for SSH, FTP, HTTP and Deluge.
+Use this command when you'd like to change your password. `chpasswd` will change the password for SSH, FTP, HTTP and all officially supported applications.
 
 Syntax:
 ```bash
