Remove neosurf as payment method

--- a/docs/pre-sales/payment-methods.mdx
+++ b/docs/pre-sales/payment-methods.mdx
@@ -16,6 +16,6 @@ We support a very large range of payment options. We have listed them all below,
 
 - EPS (On request)
 
-- Neosurf (On request)
+We regret to inform our clients using NeoSurf that the payment method is at this time unavailable, we are doing our best to bring it back but have no ETA and cannot give assurances that it will return
 
 We are always looking for new ways to make it easier for our customers, don't hessitate to contact us about a new way to receive payments.
