--- a/docs/dedicated-servers/getting-started/guestftp.mdx
+++ b/docs/dedicated-servers/getting-started/guestftp.mdx
@@ -18,3 +18,5 @@ So for example to give username ”test”, with the password ”test” access 
 `./guestftp.sh test test /home/test/test/`
 
 After the script has ran fully, you can check that the service is up and running with `service guest-ftp status` and it should say that the service is active.
+
+The port to use to be able to connect is 2121.
