--- a/docs/application-hosting/guides/rclone-and-mergerfs.mdx
+++ b/docs/application-hosting/guides/rclone-and-mergerfs.mdx
@@ -4,6 +4,9 @@ title: Rclone and Mergerfs mount
 sidebar: Rclone and Mergerfs mount
 ---
 
+:::tip Please Note This guide is written by a community member, support for this will solely be via our discord community
+
+:::
 For users asking for a way to add Dropbox via `systemd --user` and MergerFS here is a howto.
 
 First you need to have a `dropbox.service` file. You can use this one that is up to date with Dropbox
