--- a/docs/pre-sales/promo-codes.mdx
+++ b/docs/pre-sales/promo-codes.mdx
@@ -13,6 +13,7 @@ General overview of the terms for promo codes at hostingby.design
 
 ## Exceptions
 
+- Promo codes cannot be used for existing services, they are exclusively for new products being sold.
 - Promo codes are not transferable to another service, this includes upgrades to the existing package.
 - We do not always cover all of our products in a promotion, that'll be clear in the promotion offering but the promo code will also display it on checkout.
 - Unless otherwise stated, promo codes do not work on annual payments as those already include a discount.
