--- a/docs/pre-sales/payment-methods.mdx
+++ b/docs/pre-sales/payment-methods.mdx
@@ -4,18 +4,18 @@ title: Accepted payment methods
 sidebar_label: Accepted payment methods
 ---
 
-We support a very large range of payment options. We have listed them all below, including the fees for each method.
+We support a large range of payment options, we have listed them all below.
 
 - PayPal
 
 - VISA/MasterCard
 
-- Bitcoin / LiteCoin / Ethereum / Monero / +50 other coins
+- Bitcoin / LiteCoin / Ethereum / Monero / +50 other cryptocurrencies
 
 - iDeal (On request)
 
 - EPS (On request)
 
-We regret to inform our clients using NeoSurf that the payment method is at this time unavailable, we are doing our best to bring it back but have no ETA and cannot give assurances that it will return
+We regret to inform our clients using NeoSurf that the payment method is at this time unavailable, we are doing our best to bring it back but have no ETA and cannot give assurances that it will return.
 
-We are always looking for new ways to make it easier for our customers, don't hessitate to contact us about a new way to receive payments.
+We are always looking for new ways to make it easier for our customers, don't hesitate to contact us about new ways to receive payments.
