--- a/docs/application-hosting/applications/jellyfin.mdx
+++ b/docs/application-hosting/applications/jellyfin.mdx
@@ -7,7 +7,7 @@ sidebar_label: Jellyfin
 Jellyfin is a self-hosted AV streaming platform. It is a FOSS fork of the Emby project.
 
 :::tip Upgrading
-Upgrading your Jellyfin instance is a simple process, login to the webui/dashboard we provide for your service, find the "Service info" section in the page you are presented with, from there simply click "Restart" next to plex, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
+Upgrading your Jellyfin instance is a simple process, login to the webui/dashboard we provide for your service, find the "Service info" section in the page you are presented with, from there simply click "Restart" next to jellyfin, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
 :::
 
 ## Installation
