--- a/docs/application-hosting/applications/lounge.mdx
+++ b/docs/application-hosting/applications/lounge.mdx
@@ -25,6 +25,13 @@ Upgrading your The Lounge instance is a simple process, login to the webui/dashb
 You can access The Lounge by clicking the link in your Swizzin Panel. If you require the personalized port The Lounge runs for you, you can get it with this command:
 `cat ~/.install/.lounge.lock`
 
+## Adding IRC Server
+On your first login you will be presented with a screen where you can add IRC Servers and Channels to join. 
+Simply add the Server, for example irc.libera.chat, the port and possible password. 
+Then fill in the Nick, Nickname and Channels you wish to join, for example #thelounge.
+
+After you have filled in the necessary information, just click Connect.  You can add multiple servers and channels, which will then be displayed on the left hand side of the screen.
+
 ## Service Management
 
 Like all box configured applications, you can manage The Lounge via SSH with box with start, stop, restart, enable and disable commands.
