--- a/docs/application-hosting/applications/lounge.mdx
+++ b/docs/application-hosting/applications/lounge.mdx
@@ -12,7 +12,7 @@ First you must connect to your slot via ssh. If you need help connecting to the 
 Installing The Lounge on your slot is easy. Simply issue the following command:
 
 ```plaintext main
-box install lounge
+box install thelounge
 ```
 Installation will take a few moments. Once it's done, you'll receive a notice that the installation is complete and the installer will let you know where you can access the application. For example: `https://app02.hostingby.design/thelounge`.
 A link to access the application will also appear in your Swizzin Panel.
@@ -38,5 +38,5 @@ Like all box configured applications, you can manage The Lounge via SSH with box
 
 import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="lounge" />
+<SystemdTabs service="thelounge" />
 
