--- a/docs/application-hosting/applications/lounge.mdx
+++ b/docs/application-hosting/applications/lounge.mdx
@@ -23,7 +23,7 @@ Upgrading your The Lounge instance is a simple process, login to the webui/dashb
 
 ## How to Access
 You can access The Lounge by clicking the link in your Swizzin Panel. If you require the personalized port The Lounge runs for you, you can get it with this command:
-`cat ~/.install/.lounge.lock`
+`cat ~/.install/.thelounge.lock`
 
 ## Adding IRC Server
 On your first login you will be presented with a screen where you can add IRC Servers and Channels to join. 
