--- a/docs/application-hosting/community-applications/lounge.mdx
+++ b/docs/application-hosting/community-applications/lounge.mdx
@@ -4,6 +4,7 @@ title: The Lounge
 sidebar_label: The Lounge
 ---
 
+:::warning This is outdated and only stored for reference - We have official support for this app now; box install thelounge. :::
 A frequently asked question we get from customers is if we have support for The Lounge. At the time of writing, we don't officially support it, but it can be installed using a script a community member has written.
 
 To follow this guide, you will need to SSH into your server. If you need help with this, please refer to the [how do I connect](../getting-started/how-do-i-connect.md) article.
