--- a/docs/application-hosting/applications/filebrowser.mdx
+++ b/docs/application-hosting/applications/filebrowser.mdx
@@ -26,6 +26,7 @@ There's very little to configure in Filebrowser after installation. It will use 
 
 ## Service Management
 Like all box configured applications, you can manage Filebrowser via SSH with box with start, stop, restart, enable and disable commands.
+As of writing this documentation (25.3.2025), filesharing is only possible if you share the credentials to your slot with the person you're sharing a file to, but this functionality has been added to our dev platform and will be pushed out as soon as it's verified to work.
 
 import SystemdTabs from "../snippets/systemdtabs.mdx";
 
