--- a/docs/application-hosting/community-applications/community-basics.mdx
+++ b/docs/application-hosting/community-applications/community-basics.mdx
@@ -37,7 +37,9 @@ import UserSystemd from "../snippets/usersystemd.mdx";
 
 ## Troubleshooting
 For most troubleshooting, please consider consulting the respective application's documentation/wiki.
-
+:::warning
+Please be aware that unofficial apps are run with a self-signed certificate, which means your browser might give you an SSL error. Connection-wise it's equally secure, but your browser will still flag it as such. Only official apps can run with valid certificates.
+:::
 #### Viewing logs
 
 :::tip  
