--- a/docs/application-hosting/community-applications/pyenv-installation.mdx
+++ b/docs/application-hosting/community-applications/pyenv-installation.mdx
@@ -12,33 +12,58 @@ For more information on pyenv, see [github.com/pyenv/pyenv](https://github.com/p
 Installation requires you to SSH into your server. If you need help with this, please refer to the [how do I connect](../getting-started/how-do-i-connect.md) article.
 
 1. Make a `tmp` folder in your home directory.
-```mkdir -p "$HOME/tmp" && export TMPDIR="$HOME/tmp"```
+```
+mkdir -p "$HOME/tmp" && export TMPDIR="$HOME/tmp"
+```
 2. Install pyenv
-```curl https://pyenv.run | bash```
+```
+curl https://pyenv.run | bash
+```
 3. Add the following to your `~/.bashrc` file.
 ```bash
 export PATH="$HOME/.pyenv/bin:$PATH"
 eval "$(pyenv init --path)"
 eval "$(pyenv init -)"
-eval "$(pyenv virtualenv-init -)"```
+eval "$(pyenv virtualenv-init -)"
+```
 4. Reload your shell.
-```source ~/.bashrc```
+```
+source ~/.bashrc
+```
 5. Install the python version you wish to have usable with pyenv.
-```pyenv install 3.12.0```
+```
+pyenv install 3.12.0
+```
 6. Head to the directory where you wish to set the python version from the previous step to be usable in.
-```cd /path/to/directory```
+```
+cd /path/to/directory
+```
 7. Set the directory pyenv version.
-```pyenv local 3.12.0```
+```
+pyenv local 3.12.0
+```
 8. Create an environment in that directory.
-```pyenv virtualenv {environment-name}```
+```
+pyenv virtualenv {environment-name}
+```
 9. Activate the environment.
-```pyenv activate {environment-name}```
-
+```
+pyenv activate {environment-name}
+```
+### Additional Commands
 To get out of the environment, do:
-```pyenv deactivate.
+```
+pyenv deactivate
+```
 To view the list of environments, do:
-```pyenv virtualenvs```
+```
+pyenv virtualenvs
+```
 To uninstall a specific python version, do:
-```pyenv uninstall 3.12.0```
+```
+pyenv uninstall 3.12.0
+```
 To uninstall a specific environment, do:
-```pyenv uninstall {environment-name}```
+```
+pyenv uninstall {environment-name}
+```
