--- a/docs/application-hosting/applications/lounge.mdx
+++ b/docs/application-hosting/applications/lounge.mdx
@@ -14,7 +14,7 @@ Installing The Lounge on your slot is easy. Simply issue the following command:
 ```plaintext main
 box install thelounge
 ```
-Installation will take a few moments. Once it's done, you'll receive a notice that the installation is complete and the installer will let you know where you can access the application. For example: `https://app02.hostingby.design/thelounge`.
+Installation will take a few moments. Once it's done, you'll receive a notice that the installation is complete and the installer will let you know where you can access the application. For example: `https://<server>.<network>.itsby.design/<user>/thelounge`.
 A link to access the application will also appear in your Swizzin Panel.
 
 :::tip Upgrading
