--- a/docs/application-hosting/applications/plex.mdx
+++ b/docs/application-hosting/applications/plex.mdx
@@ -61,6 +61,10 @@ You are welcome to change most of the settings under the server configuration; h
 
 ### Libraries
 
+:::tip Paths
+To find folders inside of your /home/ directory, yoou need to navigate to /data/ in Plex, as we mount your home directory under the /data/ folder!
+:::
+
 During the setup of Plex, we automatically configure two media Libraries for you. These correspond to two directories in your home folder:
 
 - TV Shows > `~/media/TV Shows`
