--- a/docs/application-hosting/applications/plex.mdx
+++ b/docs/application-hosting/applications/plex.mdx
@@ -62,7 +62,7 @@ You are welcome to change most of the settings under the server configuration; h
 ### Libraries
 
 :::tip Paths
-To find folders inside of your /home/<username> directory, you need to navigate to /data/ in Plex, as we mount your home directory under the /data/ folder!
+To find folders inside of your /home/"username" directory, you need to navigate to /data/ in Plex, as we mount your home directory under the /data/ folder!
 :::
 
 During the setup of Plex, we automatically configure two media Libraries for you. These correspond to two directories in your home folder:
