--- a/docs/application-hosting/applications/audiobookshelf.mdx
+++ b/docs/application-hosting/applications/audiobookshelf.mdx
@@ -16,7 +16,7 @@ box install audiobookshelf
 It will take a minute or two to install, after which you will see a message stating that the app has been installed and where you can access the application, and the link to the app will appear in your Swizzin panel.
 
 :::tip Upgrading
-Upgrading the Audiobookshelf installation is a simple process, login to the webui/dashboard we provide for your service, find the "Service info" section in the page you are presented with, from there simply click "Restart" next to audiobookshelf, that will restart the app and also check for updates, please note that we are usually 2-3 days behind on updates!
+Due to a few custom tweaks we need to do to get the app working properly, automatic updates for Audiobookshelf are disabled. We will manually push updates as often as possible, but due to us needing to run tests before updates are pushed, we will be running a bit behind on the updates just to make sure everything works as intended.
 :::
 
 ## How to Access
